--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     </div>
                     <div class="row">
                         <div class="portfolio-heading padd-15">
-                            <h2>Meu Últimos Projetos :</h2>
+                            <h2>Meus Últimos Projetos :</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -381,8 +381,8 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://jogodavelha-simples.netlify.app"><img 
-                                        src="images/jogos.png"></a>
+                                    <a href="https://pesquisaclima.netlify.app"><img 
+                                        src="images/Pesquisa Clima.jpg"></a>
                                 </div>
                             </div>
                         </div>
